default categories done

--- a/app/src/main/res/layout/bottomsheet_transaction.xml
+++ b/app/src/main/res/layout/bottomsheet_transaction.xml
@@ -36,6 +36,13 @@
                 android:layout_centerHorizontal="true"/>
 
         </RelativeLayout>
+        <!--<Spinner-->
+            <!--android:id="@+id/transaction_account_name"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginRight="18dp"-->
+            <!--android:layout_marginLeft="18dp"-->
+            <!--android:layout_marginTop="10dp"/>-->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -67,6 +74,7 @@
                 android:elevation="10dp"/>
         </LinearLayout>
         <EditText
+            android:id="@+id/transaction_description_textview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="10dp"
@@ -77,31 +85,31 @@
             android:inputType="text"
             android:layout_marginLeft="18dp"
             android:layout_marginRight="18dp"/>
-        <LinearLayout
-            android:padding="15dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:weightSum="3">
+        <!--<LinearLayout-->
+            <!--android:padding="15dp"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:orientation="horizontal"-->
+            <!--android:layout_marginLeft="10dp"-->
+            <!--android:layout_marginRight="10dp"-->
+            <!--android:weightSum="3">-->
 
-            <ImageView
-                android:layout_width="0dp"
-                android:layout_height="100dp"
-                android:layout_weight="2"
-                android:background="@drawable/transaction_detail_background1"
-                android:layout_gravity="center_vertical"/>
-            <Button
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:background="@drawable/amount_back"
-                android:text="Add image"
-                android:layout_weight="1"
-                android:layout_marginLeft="10dp"
+            <!--<ImageView-->
+                <!--android:layout_width="0dp"-->
+                <!--android:layout_height="100dp"-->
+                <!--android:layout_weight="2"-->
+                <!--android:background="@drawable/transaction_detail_background1"-->
+                <!--android:layout_gravity="center_vertical"/>-->
+            <!--<Button-->
+                <!--android:layout_width="0dp"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:background="@drawable/amount_back"-->
+                <!--android:text="Add image"-->
+                <!--android:layout_weight="1"-->
+                <!--android:layout_marginLeft="10dp"-->
 
-                android:layout_gravity="center_vertical"/>
-        </LinearLayout>
+                <!--android:layout_gravity="center_vertical"/>-->
+        <!--</LinearLayout>-->
 
         <FrameLayout
             android:layout_width="match_parent"
