--- a/app/src/main/res/layout/fragment_accounts.xml
+++ b/app/src/main/res/layout/fragment_accounts.xml
@@ -26,6 +26,7 @@
             android:background="@drawable/button_shape"
             android:padding="5dp"
             android:textColor="@color/white"
+            android:textSize="12sp"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
