--- a/app/src/main/res/layout/fragment_income_report.xml
+++ b/app/src/main/res/layout/fragment_income_report.xml
@@ -4,10 +4,33 @@
     android:layout_height="match_parent"
     tools:context="com.example.lenovo.myfinance.Fragments.Income_Report_Fragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
+
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:weightSum="2">
+            <com.github.mikephil.charting.charts.PieChart
+                android:id="@+id/income_piechart_transactions"
+                android:elevation="10dp"
+                android:padding="10dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"/>
+            <com.github.mikephil.charting.charts.LineChart
+                android:id="@+id/income_linechart_transactions"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
 
 </FrameLayout>
