--- a/app/src/main/res/layout/fragment_income_report.xml
+++ b/app/src/main/res/layout/fragment_income_report.xml
@@ -23,7 +23,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"/>
-            <com.github.mikephil.charting.charts.LineChart
+            <com.github.mikephil.charting.charts.BarChart
                 android:id="@+id/income_linechart_transactions"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
