dynamic piecharts and barcharts

--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -7,23 +7,27 @@
             android:title="Accounts"
             android:icon="@drawable/accounts"
             />
+        <item android:id="@+id/nav_funds"
+            android:title="My funds"
+            />
         <item android:id="@+id/nav_backup"
             android:title="Backup"
             android:icon="@drawable/backup"
             />
-        <item android:id="@+id/nav_security"
-            android:title="Security"
-            android:icon="@drawable/security"/>
-        <item android:id="@+id/nav_settings"
-            android:title="Settings"
-            android:icon="@drawable/settings">
-        </item>
-        <item android:id="@+id/nav_Reminders"
-            android:title="Reminders"
-            android:icon="@drawable/reminders"/>
+        <!--<item android:id="@+id/nav_security"-->
+            <!--android:title="Security"-->
+            <!--android:icon="@drawable/security"/>-->
+
+
+        <!--<item android:id="@+id/nav_Reminders"-->
+            <!--android:title="Reminders"-->
+            <!--android:icon="@drawable/reminders"/>-->
 
     <item android:title="Others">
         <menu>
+            <item android:id="@+id/nav_settings"
+                android:title="Settings"
+                android:icon="@drawable/settings"/>
             <item
                 android:id="@+id/nav_aboutus"
                 android:title="About us"/>
