--- a/app/src/main/res/layout/fragment_funds.xml
+++ b/app/src/main/res/layout/fragment_funds.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.example.lenovo.myfinance.Fragments.Funds_fragment">
     <LinearLayout
         android:layout_width="match_parent"
@@ -13,6 +14,7 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
             android:layout_marginLeft="10dp"
+            app:tabIndicatorHeight="0dp"
             android:background="@drawable/layout_shape"/>
         <android.support.v4.view.ViewPager
             android:id="@+id/fund_viewpager"
