--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -10,6 +10,8 @@
         <item android:id="@+id/nav_funds"
             android:title="My funds"
             />
+        <item android:id="@+id/nav_tips"
+            android:title="Financial Tips"/>
         <item android:id="@+id/nav_backup"
             android:title="Backup"
             android:icon="@drawable/backup"
