financial tips done

--- a/app/src/main/res/layout/dialog_add_category.xml
+++ b/app/src/main/res/layout/dialog_add_category.xml
@@ -21,7 +21,8 @@
         android:layout_height="wrap_content"
         android:hint="enter budget"
         android:gravity="center"
-        android:inputType="numberPassword"
+        android:inputType="number"
+        android:maxLines="1"
         android:layout_marginTop="5dp"
         android:padding="5dp"
         android:background="@drawable/calculator_button"
