--- a/app/src/main/res/layout/income_category_layout.xml
+++ b/app/src/main/res/layout/income_category_layout.xml
@@ -6,12 +6,12 @@
     android:padding="10dp"
     android:elevation="5dp"
     android:layout_marginBottom="5dp"
-    android:weightSum="3"
+
     xmlns:android="http://schemas.android.com/apk/res/android">
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="2"
+
         android:layout_gravity="center_vertical"
         android:orientation="horizontal">
         <ImageView
@@ -33,29 +33,29 @@
             />
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_gravity="center_vertical"
-       android:layout_weight="1"
-        android:padding="5dp">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="Left to SAVE:"
-            android:textStyle="bold"
-            android:layout_marginBottom="5dp"
+    <!--<LinearLayout-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:orientation="vertical"-->
+        <!--android:layout_gravity="center_vertical"-->
+       <!--android:layout_weight="1"-->
+        <!--android:padding="5dp">-->
+        <!--<TextView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_gravity="center_horizontal"-->
+            <!--android:text="Left to SAVE:"-->
+            <!--android:textStyle="bold"-->
+            <!--android:layout_marginBottom="5dp"-->
 
-           />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="1000.0"
-            android:background="@drawable/amount_back"
-            android:layout_gravity="center_horizontal"
-            android:padding="2dp"/>
-    </LinearLayout>
+           <!--/>-->
+        <!--<TextView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="1000.0"-->
+            <!--android:background="@drawable/amount_back"-->
+            <!--android:layout_gravity="center_horizontal"-->
+            <!--android:padding="2dp"/>-->
+    <!--</LinearLayout>-->
 
 </LinearLayout>
