--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -9,9 +9,11 @@
             />
         <item android:id="@+id/nav_funds"
             android:title="My funds"
+            android:icon="@drawable/fund_icon"
             />
         <item android:id="@+id/nav_tips"
-            android:title="Financial Tips"/>
+            android:title="Financial Tips"
+            android:icon="@drawable/tips_icon"/>
         <item android:id="@+id/nav_backup"
             android:title="Backup"
             android:icon="@drawable/backup"
