--- a/app/src/main/res/layout/fragment_loan_calulator.xml
+++ b/app/src/main/res/layout/fragment_loan_calulator.xml
@@ -79,7 +79,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text=" 4.5"
+                    android:hint=""
                     android:padding="5dp"
                     android:background="@drawable/transaction_detail_background1"/>
             </LinearLayout>
@@ -102,7 +102,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text=" 4.5"
+                     android:hint=""
                     android:padding="5dp"
                     android:background="@drawable/transaction_detail_background1"/>
             </LinearLayout>
