--- a/app/src/main/res/layout/fragment_loan_calulator.xml
+++ b/app/src/main/res/layout/fragment_loan_calulator.xml
@@ -16,6 +16,8 @@
         android:textColor="@color/white"
         android:gravity="center_horizontal"
         android:layout_marginBottom="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:background="@drawable/layout_shape"/>
         <LinearLayout
             android:layout_width="match_parent"
