--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -14,6 +14,9 @@
         <item android:id="@+id/nav_loancal"
             android:title="Loan Calulator"
             android:icon="@drawable/loan_cal"/>
+        <item android:id="@+id/nav_mortgagecal"
+            android:title="Mortgage Calculator"
+            android:icon="@drawable/icon_mortgage"/>
         <item android:id="@+id/nav_tips"
             android:title="Financial Tips"
             android:icon="@drawable/tips_icon"/>
