create fund done

--- a/app/src/main/res/layout/expense_transaction_detail.xml
+++ b/app/src/main/res/layout/expense_transaction_detail.xml
@@ -47,7 +47,7 @@
                 android:padding="2dp"
                 android:textSize="12sp" />
             <TextView
-                android:id="@+id/account_name"
+                android:id="@+id/transaction_account_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Account name"
