--- a/app/src/main/res/layout/fragment_mortgage__calculator.xml
+++ b/app/src/main/res/layout/fragment_mortgage__calculator.xml
@@ -47,7 +47,7 @@
                 android:id="@+id/interestrate_edittext"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Enter interest rate"
+                android:hint="Enter interest rate %"
                 android:padding="10dp"
                 android:inputType="number"
                 android:layout_marginTop="10dp"
@@ -75,7 +75,7 @@
                 android:id="@+id/propertytax_edittextr"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Enter property tax"
+                android:hint="Enter property tax rate %"
                 android:padding="10dp"
                 android:inputType="number"
                 android:layout_marginTop="10dp"
