--- a/app/src/main/res/layout/bottomsheet_addfund.xml
+++ b/app/src/main/res/layout/bottomsheet_addfund.xml
@@ -30,7 +30,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="TRANSACTION DETAIL"
+                android:text="FUND DETAIL"
                 android:textColor="@color/white"
                 android:textSize="15sp"
                 android:layout_centerHorizontal="true"/>
@@ -112,7 +112,7 @@
                         android:layout_height="wrap_content"
                         android:enabled="false"
                         android:textColor="@color/colorPrimaryDark"
-                        android:hint= " Enter transaction amount"
+                        android:hint= " Enter fund amount"
                         android:layout_gravity="center_horizontal"
                         android:gravity="center"
                         android:lines="2"
