--- a/app/src/main/res/layout/bottomsheet_transaction.xml
+++ b/app/src/main/res/layout/bottomsheet_transaction.xml
@@ -36,13 +36,14 @@
                 android:layout_centerHorizontal="true"/>
 
         </RelativeLayout>
-        <!--<Spinner-->
-            <!--android:id="@+id/transaction_account_name"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginRight="18dp"-->
-            <!--android:layout_marginLeft="18dp"-->
-            <!--android:layout_marginTop="10dp"/>-->
+        <Spinner
+            android:id="@+id/transaction_account_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="18dp"
+            android:layout_marginLeft="18dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
