--- a/app/src/main/res/layout/fragment_funds.xml
+++ b/app/src/main/res/layout/fragment_funds.xml
@@ -7,6 +7,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/backgroundwhite"
         android:orientation="vertical">
         <android.support.design.widget.TabLayout
             android:id="@+id/fund_tablayout"
