--- a/app/src/main/res/layout/fragment_my_fund.xml
+++ b/app/src/main/res/layout/fragment_my_fund.xml
@@ -7,6 +7,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/backgroundwhite"
         android:orientation="vertical">
         <LinearLayout
             android:layout_width="match_parent"
@@ -45,7 +46,7 @@
         <android.support.v4.widget.SwipeRefreshLayout
             android:id="@+id/swiperefresh_layout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
             android:layout_marginLeft="10dp"
