--- a/app/src/main/res/layout/individual_account_detail.xml
+++ b/app/src/main/res/layout/individual_account_detail.xml
@@ -8,29 +8,21 @@
     android:layout_marginBottom="5dp"
     android:padding="5dp">
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="5dp">
+      >
         <TextView
             android:id="@+id/accountname_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Account Name"
             android:textStyle="bold"
-            android:layout_gravity="center_horizontal"
+            android:layout_gravity="left"
+            android:layout_marginLeft="20dp"
             android:gravity="center"
             android:layout_marginBottom="2dp"/>
-        <ImageView
-            android:id="@+id/accounticon_imageview"
-            android:layout_width="50dp"
-            android:layout_height="40dp"
-            android:src="@drawable/account_shape"
-            android:layout_gravity="center_horizontal"
-           />
-    </LinearLayout>
-
-    <LinearLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -130,6 +122,10 @@
 
 
         </LinearLayout>
+
+    </LinearLayout>
+
+
 
 
 
